
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.up.ling</groupId>
  <artifactId>irtg</artifactId>
  <packaging>jar</packaging>
  <version>1.1-SNAPSHOT</version>
  <name>irtg</name>
  <url>http://maven.apache.org</url>

  <properties>
    <antlr.version>4.2.2</antlr.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  
  <dependencies>
    <dependency>
      <groupId>de.saar.coli</groupId>
      <artifactId>basics</artifactId>
      <version>[1.2.30,)</version>
    </dependency>

    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>15.0</version>
    </dependency>

    <dependency> <!-- prerequisite for Guava >= 13 when using Scala -->
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>2.0.2</version>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <version>3.0</version>
    </dependency>
    
    <dependency>
      <groupId>cc.mallet</groupId>
      <artifactId>mallet</artifactId>
      <version>2.0.7</version>
    </dependency>
    
    <dependency>
      <groupId>it.unimi.dsi</groupId>
      <artifactId>fastutil</artifactId>
      <version>6.5.6</version>
    </dependency>

    <dependency>
      <groupId>org.simplericity.macify</groupId>
      <artifactId>macify</artifactId>
      <version>1.4</version>
    </dependency>
    
    <dependency>
      <groupId>com.bric.window</groupId>
      <artifactId>windowmenu</artifactId>
      <version>1.0</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>2.2.3</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.2.3</version>
    </dependency>

    <dependency>
      <groupId>net.sf.jgrapht</groupId>
      <artifactId>jgrapht</artifactId>
      <version>0.8.3</version>
    </dependency>

    <dependency>
      <groupId>org.antlr</groupId>
      <artifactId>antlr4-runtime</artifactId>
      <version>${antlr.version}</version>
    </dependency>

        <dependency>
	<groupId>jgraph</groupId>
	<artifactId>jgraph</artifactId>
	<version>5.13.0.0</version>
        </dependency>

<!--
    <dependency>
      <groupId>org.tinyjee.jgraphx</groupId>
      <artifactId>jgraphx</artifactId>
      <version>2.0.0.1</version>
    </dependency>
-->


    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.6</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <artifactId>groovy-all</artifactId>
      <groupId>org.codehaus.groovy</groupId>
      <version>2.0.5</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.swinglabs</groupId>
      <artifactId>swing-layout</artifactId>
      <version>1.0.3</version>
    </dependency>
  </dependencies>

  <build>

    <plugins>
      <plugin>
	<groupId>org.codehaus.gmaven</groupId>
	<artifactId>gmaven-plugin</artifactId>
	<version>1.3</version>
	<configuration>
	  <providerSelection>1.7</providerSelection>
	</configuration>
	<executions>
	  <execution>
	    <goals>          
	      <goal>testCompile</goal>
	    </goals>
	  </execution>
	</executions>

	<dependencies>
	  <dependency>
	    <groupId>org.codehaus.gmaven.runtime</groupId>
	    <artifactId>gmaven-runtime-1.7</artifactId>
	    <version>1.3</version>
	    <exclusions>
	      <exclusion>
		<groupId>org.codehaus.groovy</groupId>
		<artifactId>groovy-all</artifactId>
	      </exclusion>
	    </exclusions>
	  </dependency>
	  <dependency>
	    <groupId>org.codehaus.groovy</groupId>
	    <artifactId>groovy-all</artifactId>
	    <version>1.8.6</version>
	  </dependency>
	</dependencies>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.7</version>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>target/generated-sources/antlr4</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.antlr</groupId>
        <artifactId>antlr4-maven-plugin</artifactId>
        <version>${antlr.version}</version>
	<executions>
	  <execution>
            <goals>
	      <goal>antlr4</goal>
            </goals>
	  </execution>
	</executions>
      </plugin>

      <plugin>
	<groupId>org.codehaus.mojo</groupId>
	<artifactId>javacc-maven-plugin</artifactId>
	<version>2.6</version>
	<executions>
	  <execution>
	    <id>javacc</id>
	    <goals>
	      <goal>javacc</goal>
	    </goals>
	  </execution>
	</executions>
      </plugin>

      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-assembly-plugin</artifactId>
	<version>2.4</version>
	<configuration>
	  <descriptors>
	    <descriptor>zip.xml</descriptor>
	  </descriptors>
	  <appendAssemblyId>false</appendAssemblyId>
	</configuration>
	<executions>
	  <execution>
	    <id>make-assembly</id> <!-- this is used for inheritance merges -->
	    <phase>install</phase> <!-- append to the packaging phase. -->
	    <goals>
	      <goal>single</goal> <!-- goals == mojos -->
	    </goals>
	  </execution>
	</executions>
      </plugin>

      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-javadoc-plugin</artifactId>
	<version>2.9</version>
	<configuration>
	  <excludePackageNames>de.up.ling.irtg.algebra.lambda:de.up.ling.irtg.maxent</excludePackageNames>

	  <show>public</show>
	  <links>
	    <link>http://www.ling.uni-potsdam.de/tcl/basics/apidocs/</link>
	    <link>http://docs.guava-libraries.googlecode.com/git-history/v12.0/javadoc</link>
	  </links>
	  <detectLinks>true</detectLinks>
	</configuration>
      </plugin>

      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-shade-plugin</artifactId>
	<version>2.3</version>
	<executions>
	  <execution>
	    <phase>package</phase>
	    <goals>
	      <goal>shade</goal>
	    </goals>
	    <configuration>
	      <minimizeJar>true</minimizeJar>
	      <filters>
		<filter>
		  <artifact>*:*</artifact>
		  <excludes>
		    <exclude>META-INF/*.SF</exclude>
		    <exclude>META-INF/*.DSA</exclude>
		    <exclude>META-INF/*.RSA</exclude>                                       
		  </excludes>
		</filter>
		<!-- add include filters here if necessary -->
	      </filters>
	      <transformers>
		<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
		  <mainClass>de.up.ling.irtg.gui.GuiMain</mainClass>
		</transformer>
	      </transformers>
	    </configuration>
	  </execution>
	</executions>
      </plugin>

      <plugin>
	<groupId>net.alchim31.maven</groupId>
	<artifactId>scala-maven-plugin</artifactId>
	<version>3.1.5</version>
	<executions>
	  <execution>
	    <goals>
	      <goal>compile</goal>
	      <goal>testCompile</goal>
	    </goals>
	  </execution>
	</executions>
	<configuration>
	  <scalaVersion>2.10.2</scalaVersion>
	  <compileOrder>JavaThenScala</compileOrder>
	  <excludes>
	    <exclude>**/*.java</exclude>
	  </excludes>
	  <recompileMode>modified-only</recompileMode>
	  <jvmArgs>
	    <jvmArg>-Xms64m</jvmArg>
	    <jvmArg>-Xmx1024m</jvmArg>
	  </jvmArgs>
	  <javacArgs>
	    <javacArg>-Xlint:unchecked</javacArg>
	    <javacArg>-Xlint:deprecation</javacArg>
	    <javacArg>-XX:MaxPermSize=128M</javacArg>
	  </javacArgs>
	</configuration>
      </plugin>

      <!-- plugin configuration for Jenkins -->
      <plugin>
	<groupId>org.codehaus.mojo</groupId>
	<artifactId>findbugs-maven-plugin</artifactId>
	<version>2.5.2</version>
	<configuration>
	  <findbugsXmlOutput>true</findbugsXmlOutput>
	  <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
	  <xmlOutput>true</xmlOutput>
	</configuration>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.antlr</groupId>
          <artifactId>antlr4-maven-plugin</artifactId>
          <version>${antlr.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <extensions>
      <extension>
	<groupId>org.apache.maven.wagon</groupId>
	<artifactId>wagon-ssh-external</artifactId>
	<version>1.0-beta-6</version>
      </extension>
    </extensions>
  </build>


  <repositories>
    <repository>
      <id>tcl-releases</id>
      <name>TCL releases</name>
      <url>http://www.ling.uni-potsdam.de/tcl/maven2/releases</url>
      <releases>
	<enabled>true</enabled>
      </releases>
      <snapshots>
	<enabled>true</enabled>
      </snapshots>
    </repository>


    <repository>
      <id>tcl-external</id>
      <name>TCL external libraries</name>
      <url>http://www.ling.uni-potsdam.de/tcl/maven2/external</url>
      <releases>
	<enabled>true</enabled>
      </releases>
      <snapshots>
	<enabled>true</enabled>
      </snapshots>
    </repository>

    
    <repository>
      <id>external</id>
      <name>ECL external libraries</name>
      <url>http://www.coli.uni-saarland.de/projects/ecl/maven2/external</url>
      <releases>
	<enabled>true</enabled>
      </releases>
      <snapshots>
	<enabled>true</enabled>
      </snapshots>
    </repository>

    <repository>
      <id>ecl-releases</id>
      <name>ECL releases</name>
      <url>http://www.coli.uni-saarland.de/projects/ecl/maven2/releases</url>
      <releases>
	<enabled>true</enabled>
      </releases>
      <snapshots>
	<enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>tcl-repository</id>
      <name>Potsdam TCL Maven repository</name>
      <url>scpexe://tcl@bramaputra.ling.uni-potsdam.de//home/tcl/tcl-web/maven2/releases</url>
    </repository>

    <site>
      <id>irtg-site</id>
      <name>Potsdam IRTG website</name>
      <url>scpexe://tcl@bramaputra.ling.uni-potsdam.de//home/tcl/tcl-web/irtg</url>
    </site>
    
    <downloadUrl>http://www.ling.uni-potsdam.de/tcl/maven2/releases</downloadUrl>
  </distributionManagement>
</project>
